--- a/srcclr.erb
+++ b/srcclr.erb
@@ -3,6 +3,7 @@ require "formula"
 class Srcclr < Formula
   homepage "https://sourceclear.com"
   url "https://download.sourceclear.com/console/srcclr-console-0.6.1.zip"
+  version "0.6.1"
   sha1 "0c106974cb53d311091f71e58f5926509b69dee3"
 
   def install
