--- a/srcclr.erb
+++ b/srcclr.erb
@@ -7,8 +7,9 @@ class Srcclr < Formula
   sha1 "0c106974cb53d311091f71e58f5926509b69dee3"
 
   def install
-  	prefix.install_metafiles
-  	libexec.install Dir["*"]
+  	bin.install "srcclr-console.jar"
+#  	prefix.install_metafiles
+#  	libexec.install Dir["*"]
 #    system "./configure", "--disable-debug", "--disable-dependency-tracking",
 #                          "--prefix=#{prefix}"
 #    system "make install"
